[package]
name = "omlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
gloo = "0.10.0"
include_dir = "0.7.3"
patternfly-yew = "0.5.0-alpha.4"
plotters = { version = "0.3.5", default-features = false, features = [
  "image",
  "all_series",
  "all_elements",
  "full_palette",
  "colormaps",
] }
plotters-canvas = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"] }
yew = { version = "0.21", features = ["csr"] }
yew-nested-router = "0.4.0"

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "5b81964a473c6b7df2e1b57e282c093031ac941e" }
